--- a/microservices/server-config/src/main/resources/configurations/Book-service.yml
+++ b/microservices/server-config/src/main/resources/configurations/Book-service.yml
@@ -11,7 +11,13 @@ server:
         ddl-auto: create
       database: postgresql
       database-platform: org.hibernate.dialect.PostgresSQLDialect
-
+    kafka:
+      producer:
+        bootstrap-servers: localhost:9092
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+        properties:
+          spring.json.type.mapping: bookingBiLL:com.att.config.BookingBiLL
 
 
     application:
