--- a/microservices/Room/pom.xml
+++ b/microservices/Room/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.att</groupId>
 	<artifactId>Room</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Room</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Room-service</name>
+	<description>Room-service</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -69,6 +69,19 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
