--- a/microservices/Gateway/pom.xml
+++ b/microservices/Gateway/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.att</groupId>
 	<artifactId>Gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Gateway-service</name>
